# ragrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs
examples/dataset/: acme-api-v1.md  acme-api-v2.md  acme-pricing.md  acme-security.md
src/: bm25.rs  chunking.rs  cli.rs  engine.rs  error.rs  lib.rs  main.rs  retriever.rs  store.rs  token_counter.rs  tokenize.rs  types.rs  verify.rs
tests/: integration.rs
