[package]
name = "ragrs"
version = "0.1.0"
edition = "2021"
description = "Fast local RAG in Rust. Index, query, verify."
license = "MIT"
repository = "https://github.com/wauldo/ragrs"
keywords = ["rag", "bm25", "search", "retrieval", "ai"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "ragrs"
path = "src/lib.rs"

[[bin]]
name = "ragrs"
path = "src/main.rs"

[dependencies]
tiktoken-rs = "0.5"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "2"
